--- a/index.html
+++ b/index.html
@@ -4,19 +4,24 @@
   <meta charset="utf-8">
   <title>Check-In Ca Trực</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <link rel="manifest" href="manifest.json">
   <style>
     body{font-family:sans-serif;padding:1rem}
     button, select{width:100%;padding:.5rem;font-size:1rem;margin:0.5rem 0}
     #status{margin:1rem 0;color:#d00}
   </style>
+
+  <!-- Google Identity Services (chỉ load trên web) -->
+  <script src="https://accounts.google.com/gsi/client" async defer></script>
 </head>
 <body>
   <h1>Check-In Ca Trực</h1>
+
+  <!-- khu vực Login -->
   <div id="userBlock">
     <button id="loginBtn">Đăng nhập với Google</button>
   </div>
 
+  <!-- Chọn Đơn vị / Nhân viên / Ca -->
   <select id="unitSel"><option value="">— Đơn vị —</option></select>
   <select id="empSel"><option value="">— Nhân viên —</option></select>
   <select id="shiftSel">
@@ -24,111 +29,130 @@
     <option>CA01</option><option>CA02</option><option>CA03</option>
   </select>
 
+  <!-- Bắt đầu / Dừng -->
   <button id="startBtn">Bắt đầu ca</button>
   <button id="stopBtn" disabled>Đã dừng</button>
   <div id="status"></div>
 
-  <footer style="font-size:.8rem;text-align:center;margin-top:2rem">
-    ©2025 EVN SPC — <a href="terms.html" target="_blank">Điều khoản & Chính sách</a>
-  </footer>
-
   <script type="module">
-    import { GoogleAuth } from '@codetrix-studio/capacitor-google-auth';
+  import { Capacitor } from '@capacitor/core';
+  import { GoogleAuth } from '@codetrix-studio/capacitor-google-auth';
 
-    const API = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
-    let userEmail='', watchId=null;
+  const API = 'https://script.google.com/macros/s/AKfycbw5dqnvTfMuMPjIkdWapz7HC9k15NiKImjhkMtPa1NymMuvtZcsf9gkfZ4BWtG2q8KkcA/exec';
+  let userEmail = '', watchId = null;
 
-    document.addEventListener('DOMContentLoaded', init);
+  document.addEventListener('DOMContentLoaded', async () => {
+    // 1) Load danh sách Đơn vị
+    const uRes = await fetch(`${API}?list=units`).then(r=>r.json());
+    if (uRes.status==='OK') {
+      uRes.units.forEach(u=>{
+        unitSel.insertAdjacentHTML('beforeend',
+          `<option value="${u.code}">${u.code} – ${u.name}</option>`);
+      });
+    }
 
-    async function init(){
-      // 1) Khởi GoogleAuth
+    // 2) Thiết lập GoogleAuth native nếu chạy trên app
+    if (Capacitor.isNativePlatform()) {
       await GoogleAuth.init({
         clientId: '280769604046-iiloggjv492ro50phm1qnp0l3ni0b4l5.apps.googleusercontent.com',
-        scopes: ['profile','email'],
-        redirectUrl: window.location.origin + '/oauth2redirect/google'
+        scopes: ['profile','email']
       });
-
-      // 2) Gắn event
-      byId('loginBtn').onclick = onLogin;
-      byId('unitSel').onchange = loadEmps;
-      byId('startBtn').onclick = startShift;
-      byId('stopBtn').onclick  = stopShift;
-
-      // 3) load units
-      const uRes = await fetch(`${API}?list=units`).then(r=>r.json());
-      if(uRes.status==='OK'){
-        uRes.units.forEach(u=>{
-          byId('unitSel').insertAdjacentHTML('beforeend',
-            `<option value="${u.code}">${u.code} – ${u.name}</option>`);
+      loginBtn.onclick = onNativeLogin;
+    } else {
+      // 3) Thiết lập Google Identity Services web
+      window.onloadGSI = () => {
+        google.accounts.id.initialize({
+          client_id: '280769604046-iiloggjv492ro50phm1qnp0l3ni0b4l5.apps.googleusercontent.com',
+          callback: onWebCredential
         });
-      }
-    }
-
-    async function onLogin(){
-      try {
-        const usr = await GoogleAuth.signIn();
-        userEmail = usr.email;
-        byId('userBlock').innerHTML = `<p>Xin chào, ${userEmail}</p>`;
-      } catch(e){
-        setStatus('Lỗi đăng nhập: '+e, true);
-      }
-    }
-
-    async function loadEmps(){
-      const unit = byId('unitSel').value;
-      byId('empSel').innerHTML = `<option value="">— Nhân viên —</option>`;
-      if (!unit) return;
-      const r = await fetch(`${API}?list=emps&unit=${unit}`).then(r=>r.json());
-      if (r.status==='OK'){
-        r.emps.forEach(e=>{
-          byId('empSel').insertAdjacentHTML('beforeend',
-            `<option value="${e.code}">${e.code} – ${e.name}</option>`);
+        google.accounts.id.renderButton(loginBtn, {
+          theme: 'outline', size: 'large', text: 'signin_with'
         });
-      }
+      };
+      // wait GSI lib
+      window.onloadGSI();
     }
 
-    function startShift(){
-      if (watchId) return;
-      const unit    = byId('unitSel').value;
-      const empCode = byId('empSel').value;
-      const shift   = byId('shiftSel').value;
-      if (!userEmail || !unit||!empCode||!shift){
-        return setStatus('Vui lòng đăng nhập và chọn đủ thông tin', true);
-      }
-      watchId = navigator.geolocation.watchPosition(pos=>{
-        const { latitude:lat, longitude:lon } = pos.coords;
-        fetch(API, {
-          method:'POST',
-          body: JSON.stringify({ unit, empCode, shift, lat, lon })
-        }).then(r=>r.json())
-          .then(j=> {
-            if (j.status!=='OK')
-              setStatus('Upload lỗi: '+j.message, true);
-          });
-      }, err=>{
-        setStatus('GPS lỗi: '+err.message, true);
-      },{ enableHighAccuracy:true, maximumAge:0, timeout:10000 });
+    unitSel.onchange = loadEmps;
+    startBtn.onclick  = startShift;
+    stopBtn.onclick   = stopShift;
+  });
 
-      byId('startBtn').disabled = true;
-      byId('stopBtn').disabled  = false;
-      setStatus('Đang gửi vị trí…');
+  // native
+  async function onNativeLogin(){
+    try {
+      const usr = await GoogleAuth.signIn();
+      userEmail = usr.email;
+      userBlock.innerHTML = `<p>Xin chào, ${userEmail}</p>`;
+    } catch(e){
+      setStatus('Lỗi login native: '+e, true);
     }
+  }
 
-    function stopShift(){
-      if (watchId) navigator.geolocation.clearWatch(watchId);
-      watchId = null;
-      byId('startBtn').disabled = false;
-      byId('stopBtn').disabled  = true;
-      setStatus('Đã dừng');
+  // web
+  function onWebCredential(response){
+    const jwt = response.credential;
+    // gọi API Google để decode token lên lấy email
+    fetch(`https://www.googleapis.com/oauth2/v3/tokeninfo?id_token=${jwt}`)
+      .then(r=>r.json())
+      .then(u=>{
+        userEmail = u.email;
+        userBlock.innerHTML = `<p>Xin chào, ${userEmail}</p>`;
+      })
+      .catch(e=> setStatus('Lỗi login web: '+e, true));
+  }
+
+  async function loadEmps(){
+    empSel.innerHTML = `<option value="">— Nhân viên —</option>`;
+    if (!unitSel.value) return;
+    const r = await fetch(`${API}?list=emps&unit=${unitSel.value}`).then(r=>r.json());
+    if (r.status==='OK') {
+      r.emps.forEach(e=>{
+        empSel.insertAdjacentHTML('beforeend',
+          `<option value="${e.code}">${e.code} – ${e.name}</option>`);
+      });
     }
+  }
 
-    function setStatus(t, isErr=false){
-      const s = byId('status');
-      s.textContent = t;
-      s.style.color   = isErr ? 'red' : 'black';
-    }
+  function startShift(){
+    if (watchId) return;
+    if (!userEmail || !unitSel.value || !empSel.value || !shiftSel.value)
+      return setStatus('Vui lòng đăng nhập và chọn đầy đủ', true);
 
-    function byId(id){ return document.getElementById(id); }
+    watchId = navigator.geolocation.watchPosition(pos=>{
+      const { latitude:lat, longitude:lon } = pos.coords;
+      fetch(API, {
+        method:'POST',
+        body: JSON.stringify({
+          unit:unitSel.value,
+          empCode:empSel.value,
+          shift:shiftSel.value,
+          lat, lon
+        })
+      }).then(r=>r.json()).then(j=>{
+        if (j.status!=='OK') setStatus('Upload lỗi: '+j.message, true);
+      });
+    }, err=>{
+      setStatus('GPS lỗi: '+err.message, true);
+    }, { enableHighAccuracy:true, timeout:10000 });
+
+    startBtn.disabled = true;
+    stopBtn.disabled  = false;
+    setStatus('Đang gửi vị trí…');
+  }
+
+  function stopShift(){
+    if (watchId) navigator.geolocation.clearWatch(watchId);
+    watchId = null;
+    startBtn.disabled = false;
+    stopBtn.disabled  = true;
+    setStatus('Đã dừng');
+  }
+
+  function setStatus(t, err=false){
+    status.textContent = t;
+    status.style.color = err?'red':'black';
+  }
   </script>
 </body>
 </html>
